--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,10 @@
     font-family: myFont;
     src: url(fonts/Neuropol.otf);
 }
+@font-face {
+    font-family: myFont2;
+    src: url(fonts/CreatoDisplay-Black.otf);
+}
 
 * {
     margin: 0;
@@ -61,7 +65,7 @@ body {
     text-align: center;
 }
 
-#headline {
+#headline1 {
     margin-top: 12%;
     font-size: 100px;
     font-family: myFont;
@@ -69,9 +73,30 @@ body {
 
 #discription {
     /* margin-top: 50px; */
-    margin: 50px 200px 0 200px;
+    margin: 50px 200px 50px 200px;
     font-size: 18px;
     font-family: "Share Tech Mono";
+    margin-bottom: 250px;
+}
+
+.headlines {
+    font-size: 20px;
+    color: white;
+    margin: 0 0 0 50px;
+    text-align: center;
+    font-family: myFont2;
+}
+
+.lists {
+    font-size: 18px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    line-height: 1.9;
+    /* display: flex;
+    flex-direction: column; */
+    text-align: center;
 }
 
 footer {
