--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,14 @@
 
 #logo {
     width: 200px;
+    /* background-color: blue; */
+    border-radius: 20px;
+    margin-top: 5px;
+    margin-left: 10px;
+}
+
+#logo:hover {
+    background-color:rgb(209, 150, 13);
 }
 
 header {
@@ -28,12 +36,20 @@ button {
     font-size: 18px;
 }
 
+button:hover {
+    color:rgb(209, 150, 13);
+}
+
 #log_in {
     background-color: black;
     color: white;
     width: 70px;
     height: 32px;
     border-radius: 5px;
+}
+#log_in:hover {
+    color: black;
+    background-color: rgb(209, 150, 13);
 }
 
 #sign_up {
@@ -42,6 +58,10 @@ button {
     width: 75px;
     height: 32px;
     border-radius: 5px;
+}
+#sign_up:hover {
+    color: black;
+    background-color: rgb(209, 150, 13);
 }
 
 #text {
@@ -102,11 +122,12 @@ body {
 footer {
     display: flex;
     background-color: white;
-    position:  fixed;
+    position:  initial;
     align-items: center;
     bottom: 0;
     width: 100%;
     height: 30px;
+    margin-bottom: 0;
 }
 
 #footer_text {
@@ -116,5 +137,5 @@ footer {
     font-size: 18px;
     width: 100%;
     margin: 30px;
-    /* padding: 10px; */
+    padding: 10px 0;
 }
