--- a/styles/log_in.css
+++ b/styles/log_in.css
@@ -1,18 +1,55 @@
 
-body {
+
+h1 {
+    color: #ffffff;
     background-color: black;
+    border-radius: 5px;
+    width: 40%;
+    height: 13%;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
-.box {
-    width: 400px;
-    height: 1500px;
-    background-color: white;
-    border: 2px solid rgb(255, 255, 255);
-    border-radius: 10px;
-    margin: 50%;
-    margin-bottom: 50%;
-    height: 100%;
+h1:hover{
+    background-color: rgb(209, 150, 13);
 }
-#text {
-    color: red;
+
+body {
+    background-color: rgb(0, 0, 0);
+}
+
+#box {
+    width: 300px;
+    height: 350px;
+    border: 4px solid #888888;
+    border-radius: 5px;
+    background-color: rgb(255, 255, 255);
+    margin: 15% auto;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+footer {
+    display: flex;
+    background-color: white;
+    position: fixed;
+    align-items: center;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+}
+
+#footer_text {
+    display: flex;
+    justify-content: space-between;
+    color: rgb(0, 0, 0);
+    font-size: 18px;
+    width: 100%;
+    margin: 30px;
+    /* padding: 10px; */
+    font-family: Arial, Helvetica, sans-serif;
 }
